force-app/main/default/objects/AtividadeInterno__c/AtividadeInterno__c.object-meta.xml
<CustomObject>
    <label>AtividadeInterno</label>
    <nameField>
        <label>Atividade</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AtividadeInterno</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>