force-app/main/default/objects/AtividadeInterno__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <label>Descricao</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>