force-app/main/default/objects/AtividadeInterno__c/fields/Hora__c.field-meta.xml
<CustomField>
    <fullName>Hora__c</fullName>
    <label>Hora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>