force-app/main/default/objects/AtividadeInterno__c/fields/HoraExtra__c.field-meta.xml
<CustomField>
    <fullName>HoraExtra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HoraExtra</label>
    <type>Checkbox</type>
</CustomField>